# task-space-model

./: .env.example  .gitignore  CLAUDE.md  DISTILLATION.md  LEDGER.md  README.md  SPEC.md  pyproject.toml  requirements.txt  spec_0.4.2.md  spec_0.5.md  spec_0.6.2.md  spec_0_6_3.md  spec_0_6_3_1.md  v0.4.1_spec.md
data/: README.md
figures/: README.md  fig10_similarity_heatmap.py  fig1_ai_exposure.py  fig2_pseudo_r2.py  fig3_selected_dwas.csv  fig3_task_scatter.py  fig4_scope.py  fig5_shared_dwas.py  fig6_embedding_similarity.py  fig7_sankey_pipeline.py  fig8_embedding_flowchart.py  fig9_word_analogy.py  fig_logit_eq.py  style.py
killshot/: killshot_0.6.4.1.md
notebooks/: visualize_manifold.py
paper/: main.tex  references.bib
scripts/: compute_csh_alt.py  compute_distance_baselines_v0731.py  compute_wasserstein_full.py  learn_csh_direction.py  reproduce_tables.py  run_aioe_centroid_v07121.py  run_battery_test_b.py  run_battery_test_b_proper.py  run_battery_test_c_prime.py  run_covid_centroid_v0773.py  run_demand_decomposition_centroid_v07123.py  run_demand_decomposition_v0703b.py  run_demand_probe_v0703.py  run_diagonal_audit_v0770.py  run_distance_audit_v07120.py  run_distance_comparison_v0732.py  run_gravity_centroid_v07125.py  run_gravity_model_v0734.py  run_gravity_ppml_v0734b.py  run_ground_metric_validation_v0733.py  run_methodology_audit_v0703c.py  run_multiverse_t_module.py  run_oop_centroid_v07124.py  run_origin_exclusion_v0777.py  run_per_origin_centroid_v07126.py  run_pre_post_covid_v0741.py  run_reallocation_v070c.py  run_rti_centroid_v07122.py  (+7 more)
(+225 files in other folders)
